# aws_mcp

./: .env.example  LICENSE  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup.py  test_basic.py  test_server.py
aws_mcp/: __init__.py  config.py  constants.py  cost_explorer.py  main.py  server.py  utils.py
tests/: test_cost_explorer.py  test_integration.py  test_utils.py
